Almost Production ready

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@runwayml/sdk": "^3.2.0",
+    "@sendgrid/mail": "^8.1.6",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "pg": "^8.16.3",
     "uuid": "^13.0.0"
   }
 }
