--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "backend",
+  "name": "renovation-vision-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@runwayml/sdk": "^3.2.0",
-    "@sendgrid/mail": "^8.1.6",
+    "@runwayml/sdk": "^0.11.0",
+    "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "multer": "^2.0.2",
-    "node-cron": "^4.2.1",
-    "pg": "^8.16.3",
-    "uuid": "^13.0.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "pg": "^8.11.0",
+    "uuid": "^9.0.0"
   }
 }
