--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
+    "path-to-regexp": "^8.3.0",
     "pg": "^8.11.0",
     "uuid": "^9.0.0"
   }
