--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.install]
-cmds = ["cd backend && npm install"]
+cmds = ["npm install"]
 
 [start]
-cms = "cd backend && node server.js"
+cms = "node server.js"
